# portscot

./: README.md  final_report.md  nmap_report.json  pyproject.toml  report.json  requirements.txt
sentinel_scan/api/: app.py
sentinel_scan/cli/: main.py
sentinel_scan/core/: base.py  engine.py  models.py  plugin_loader.py
sentinel_scan/modules/: http_enum.py  nmap_scanner.py  os_fingerprinter.py  port_scanner.py  tls_inspector.py  udp_scanner.py
sentinel_scan/plugins/: banner_check.py
sentinel_scan/reporting/: reporter.py
sentinel_scan/utils/: logger.py  target_parser.py
tests/: test_parser.py
